--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.lnct.ac.in.idealab">
+    package="com.lnct.bhopal.ac.in.idealab">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -20,60 +20,56 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".quiz.AssesmentActivity"
+            android:name="com.lnct.bhopal.ac.in.idealab.quiz.AssesmentActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".quiz.AssesmentDescriptionActivity"
+            android:name="com.lnct.bhopal.ac.in.idealab.quiz.AssesmentDescriptionActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".auth.RegisterActivity"
+            android:name="com.lnct.bhopal.ac.in.idealab.auth.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".auth.StartActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".activity.FullScreenEvent"
+            android:name="com.lnct.bhopal.ac.in.idealab.activity.FullScreenEvent"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".auth.LoginActivity"
+            android:name="com.lnct.bhopal.ac.in.idealab.auth.LoginActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".quiz.RightActivity"
+            android:name="com.lnct.bhopal.ac.in.idealab.quiz.RightActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".quiz.ShowScoreActivity"
+            android:name="com.lnct.bhopal.ac.in.idealab.quiz.ShowScoreActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".quiz.QuestionActivity"
+            android:name="com.lnct.bhopal.ac.in.idealab.quiz.QuestionActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".quiz.WrongActivity"
+            android:name="com.lnct.bhopal.ac.in.idealab.quiz.WrongActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.HomeActivity"
+            android:name="com.lnct.bhopal.ac.in.idealab.activity.HomeActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.IdeaLab" />
         <activity
-            android:name=".activity.SplashScreen"
+            android:name="com.lnct.bhopal.ac.in.idealab.activity.SplashScreen"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.IdeaLab">
