--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,13 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.10.1'
 
+
+    // Gallery :
+    implementation "com.github.jdsdhp:kutil:0.1.9"
+    implementation 'com.github.jdsdhp:gallery-droid:0.1.4'
+
+    def lifecycle_version = "2.4.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
 }
