--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,17 +67,19 @@
             android:name="com.lnct.bhopal.ac.in.idealab.activity.HomeActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.IdeaLab" />
-        <activity
-            android:name="com.lnct.bhopal.ac.in.idealab.activity.SplashScreen"
-            android:exported="true"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.IdeaLab">
+            android:theme="@style/Theme.IdeaLab" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.lnct.bhopal.ac.in.idealab.activity.SplashScreen"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.IdeaLab">
+
         </activity>
 
         <activity
