--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,9 @@
         </activity>
         <activity
             android:name="com.lnct.bhopal.ac.in.idealab.auth.RegisterActivity"
-            android:exported="false" />
+            android:exported="false" >
+
+        </activity>
         <activity
             android:name="com.lnct.bhopal.ac.in.idealab.activity.FullScreenEvent"
             android:exported="false">
@@ -68,17 +70,21 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.IdeaLab" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name="com.lnct.bhopal.ac.in.idealab.activity.SplashScreen"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.IdeaLab">
+
+
 
         </activity>
 
