--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
             android:name="com.lnct.bhopal.ac.in.idealab.auth.RegisterActivity"
             android:exported="false" >
 
+
         </activity>
         <activity
             android:name="com.lnct.bhopal.ac.in.idealab.activity.FullScreenEvent"
@@ -67,15 +68,11 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="com.lnct.bhopal.ac.in.idealab.activity.HomeActivity"
-            android:exported="true"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.IdeaLab" >
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
         <activity
@@ -83,6 +80,12 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.IdeaLab">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
 
 
